# core

./: .env.examples  .gitignore  .gitmodules  CMakeLists.txt  DockerFile  Dockerfile  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: codeql.yml  docker.yml  ghcr.yml
inc/: config.h  dotenv.h  env.h  kafka_consumer.h  kafka_producer.h  log.h  message_queue.h  websocket_server.h
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/devlopment/patches/: deployment.yaml
k8s/overlays/intergration/: kustomization.yaml
k8s/overlays/intergration/patches/: deployment.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/production/patches/: deployment.yaml
src/: config.c  dotenv.c  kafka_consumer.c  kafka_producer.c  main.c  message_queue.c  websocket_server.c
